[workspace]
members = [
    "adder",
    "closure",
    "collection",
    "concurrency",
    "generic",
    "iter",
    "lifetime",
    "minigrep",
    "ownership",
    "panic",
    "pointer",
    "rectangles",
    "renum",
    "restaurant",
    "rstruct",
    "rtrait",
    "variable",
    "marcos",
    "oop",
    "pattern"
]