[workspace]
members = [
    "adder",
    "binary_heap",
    "closure",
    "collection",
    "concurrency",
    "generic",
    "iter",
    "lifetime",
    "minigrep",
    "ownership",
    "panic",
    "pointer",
    "rectangles",
    "renum",
    "restaurant",
    "rstruct",
    "rtrait",
    "variable",
    "marcos",
    "oop",
    "pattern",
    "iasync",
    "channel",
    "webserver"
]